internal/testdata/sdk/error/fixtures/user_not_found_error.go
// Generated by Fern. Do not edit.

package api

import (
	json "encoding/json"
	fmt "fmt"
)

type UserNotFoundError struct {
	StatusCode int
	Body       *UserNotFoundErrorBody
}

func (u *UserNotFoundError) Error() string {
	return fmt.Sprintf("404: %+v", *u)
}

func (u *UserNotFoundError) UnmarshalJSON(data []byte) error {
	body := new(UserNotFoundErrorBody)
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	u.StatusCode = 404
	u.Body = body
	return nil
}

func (u *UserNotFoundError) MarshalJSON() ([]byte, error) {
	return json.Marshal(u.Body)
}
